--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,13 @@
-@import "/tmp/ags/scss/generated";
-@import "./common";
-@import "./widgets/bar";
-@import "/tmp/ags/scss/additional";
+@import '/tmp/ags/scss/generated';
+@import './common';
+@import './widgets/notifications';
+@import './widgets/media';
+@import './widgets/applauncher';
+@import './widgets/quicksettings';
+@import './widgets/powermenu';
+@import './widgets/overview';
+@import './widgets/desktop';
+@import './widgets/dashboard';
+@import './widgets/bar';
+@import './widgets/settings';
+@import '/tmp/ags/scss/additional';
