feat(workspaces): color active workspace with fg_color

--- a/src/scss/widgets/bar.scss
+++ b/src/scss/widgets/bar.scss
@@ -211,6 +211,10 @@ $float: $spacing * 0.7;
                 box-shadow: inset 0 0 0 10px transparentize($fg_color, 0.8);
             }
 
+            &.active .indicator, &:active .indicator {
+                background-color: $fg_color;
+            }
+
             &.active .indicator {
                 min-width: 14px;
                 min-height: 14px;
