--- a/src/scss/widgets/quicksettings.scss
+++ b/src/scss/widgets/quicksettings.scss
@@ -1,5 +1,6 @@
 window#quicksettings .quicksettings {
     @include floating_widget;
+    min-width: 250px;
 
     .row {
         margin-top: $spacing;
