--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,12 @@
-@import '/tmp/ags/scss/generated';
-@import './common';
-@import './widgets/notifications';
-@import './widgets/media';
-@import './widgets/applauncher';
-@import './widgets/powermenu';
-@import './widgets/overview';
-@import './widgets/desktop';
-@import './widgets/dashboard';
-@import './widgets/settings';
-@import './widgets/lockscreen';
-@import '/tmp/ags/scss/additional';
+@import "/tmp/ags/scss/generated";
+@import "./common";
+@import "./widgets/notifications";
+@import "./widgets/media";
+@import "./widgets/applauncher";
+@import "./widgets/powermenu";
+@import "./widgets/overview";
+@import "./widgets/desktop";
+@import "./widgets/dashboard";
+@import "./widgets/settings";
+@import "./widgets/lockscreen";
+@import "/tmp/ags/scss/additional";
