--- a/src/scss/widgets/overview.scss
+++ b/src/scss/widgets/overview.scss
@@ -1,32 +1,224 @@
+@mixin calendar {
+  @include widget;
+  padding: $spacing * 2 $spacing * 2 0;
+
+  calendar {
+    all: unset;
+
+    &.button {
+      @include button($flat: true);
+      margin: 1em;
+    }
+
+    &:selected {
+      box-shadow:
+        inset 0 -8px 0 0 transparentize($accent, 0.5),
+        inset 0 0 0 1px $accent;
+      border-radius: $radii * 0.6;
+    }
+
+    &.header {
+      background-color: transparent;
+      border: none;
+      color: transparentize($fg_color, 0.5);
+    }
+
+    &.highlight {
+      background-color: transparent;
+      color: transparentize($accent, 0.5);
+    }
+
+    &:indeterminate {
+      color: transparentize($fg_color, 0.9);
+    }
+    font-size: 1.1em;
+    padding: 0.2em;
+  }
+}
+
+window#overview {
+  .shader {
+    background-color: rgba(128, 128, 128, 0.1);
+  }
+}
+
 window#overview .overview {
-    @include floating_widget;
+  min-width: 1920px;
+  min-height: 1080px;
 
-    .workspace {
-        margin: 0 $spacing;
-        &:last-child { margin-right: 0; }
-        &:first-child { margin-left: 0; }
+  .center {
+    padding: 20px 10px;
 
-        &.active > widget {
-            border-color: $accent
+    .applauncher {
+      .header {
+        margin: $popover_padding;
+        margin-bottom: $popover_padding/2;
+
+        image,
+        entry {
+          @include widget;
+          padding: $spacing/2;
         }
 
-        > widget {
+        entry {
+          padding-left: $spacing;
+        }
+
+        image {
+          margin-right: $spacing;
+          -gtk-icon-transform: scale(0.8);
+          font-size: $font-size * 1.6;
+        }
+      }
+
+      .separator {
+        min-height: 1px;
+        background-color: $hover;
+        margin: $spacing/2;
+      }
+
+      scrolledwindow {
+        @include scrollbar;
+        padding: $popover_padding;
+        min-width: 500px;
+        min-height: 350px;
+      }
+
+      .placeholder {
+        margin-top: $spacing;
+        color: $fg_color;
+        font-size: 1.2em;
+      }
+
+      .app {
+        all: unset;
+        transition: $transition;
+        padding: $spacing;
+
+        label {
+          transition: $transition;
+
+          &.title {
+            color: $fg_color;
+          }
+
+          &.description {
+            color: transparentize($fg_color, 0.3);
+          }
+        }
+
+        image {
+          transition: $transition;
+          margin-right: $spacing;
+        }
+
+        &:hover,
+        &:focus {
+          .title {
+            color: $accent;
+          }
+
+          image {
+            -gtk-icon-shadow: 2px 2px $accent;
+          }
+        }
+
+        &:active {
+          background-color: transparentize($accent, 0.5);
+          border-radius: $radii;
+          box-shadow: inset 0 0 0 $border_width $border_color;
+
+          .title {
+            color: $fg_color;
+          }
+        }
+      }
+    }
+
+  }
+
+  .right {
+    padding: 20px 20px 20px 10px;
+
+    .notifications {
+      min-width: 450px;
+
+      .header {
+        padding-left: 0.3em;
+        margin-bottom: $spacing;
+
+        label {
+          font-size: 1.2em;
+        }
+
+        button {
+          @include button;
+          padding: $spacing/2 $spacing;
+
+          label {
+            font-size: 1.2em;
+          }
+        }
+      }
+
+      .notification-scrollable {
+        @include scrollbar;
+
+        scrollbar,
+        scrollbar:hover {
+          border-radius: max($radii - $border_width, 0);
+          border-top-left-radius: 0;
+          border-bottom-left-radius: 0;
+        }
+
+        .notification {
+          @include notification;
+
+          > box {
             @include widget;
-
-            &:drop(active) {
-                border-color: $accent;
-            }
+            margin: $spacing/2 0;
+            padding: $spacing;
+          }
         }
+      }
+
+      .placeholder {
+        color: $wallpaper_fg;
+        image {
+          font-size: 7em;
+        }
+        label {
+          font-size: 1.2em;
+        }
+
+        label,
+        image {
+          @if $drop_shadow {
+            text-shadow: $text_shadow;
+            -gtk-icon-shadow: $text_shadow;
+          } @else {
+            @include text_border;
+          }
+        }
+      }
     }
 
-    .client {
-        @include button;
-        border-radius: $radii*0.8;
-        margin: $spacing;
+    .datemenu {
+      .date {
+        margin-bottom: 8px;
+        font-weight: 500;
+      }
 
-        &.hidden {
-            @include hidden;
-            transition: 0;
+      .timezones {
+        .tz-local {
+          font-size: 2em;
         }
+      }
+
+      .calendar {
+        @include calendar;
+        margin-top: $spacing * 2;
+      }
     }
+  }
 }
