--- a/src/scss/widgets/overview/_index.scss
+++ b/src/scss/widgets/overview/_index.scss
@@ -1,3 +1,7 @@
+@use "../../lib/colors";
+@use "applauncher";
+@use "notifications";
+
 @mixin calendar {
   @include widget;
   padding: $spacing * 2 $spacing * 2 0;
@@ -38,7 +42,7 @@
 
 window#overview {
   .shader {
-    background-color: rgba(128, 128, 128, 0.1);
+    background-color: colors.$t_t_background;
   }
 }
 
@@ -144,159 +148,10 @@ window#overview .overview {
 
   .center {
     padding: 20px 10px;
-
-    .applauncher {
-      .header {
-        margin: $popover_padding;
-        margin-bottom: $popover_padding/2;
-
-        image,
-        entry {
-          @include widget;
-          padding: $spacing/2;
-        }
-
-        entry {
-          padding-left: $spacing;
-        }
-
-        image {
-          margin-right: $spacing;
-          -gtk-icon-transform: scale(0.8);
-          font-size: $font-size * 1.6;
-        }
-      }
-
-      .separator {
-        min-height: 1px;
-        background-color: $hover;
-        margin: $spacing/2;
-      }
-
-      scrolledwindow {
-        @include scrollbar;
-        padding: $popover_padding;
-        min-width: 500px;
-        min-height: 350px;
-      }
-
-      .placeholder {
-        margin-top: $spacing;
-        color: $fg_color;
-        font-size: 1.2em;
-      }
-
-      .app {
-        all: unset;
-        transition: $transition;
-        padding: $spacing;
-
-        label {
-          transition: $transition;
-
-          &.title {
-            color: $fg_color;
-          }
-
-          &.description {
-            color: transparentize($fg_color, 0.3);
-          }
-        }
-
-        image {
-          transition: $transition;
-          margin-right: $spacing;
-        }
-
-        &:hover,
-        &:focus {
-          .title {
-            color: $accent;
-          }
-
-          image {
-            -gtk-icon-shadow: 2px 2px $accent;
-          }
-        }
-
-        &:active {
-          background-color: transparentize($accent, 0.5);
-          border-radius: $radii;
-          box-shadow: inset 0 0 0 $border_width $border_color;
-
-          .title {
-            color: $fg_color;
-          }
-        }
-      }
-    }
   }
 
   .right {
     padding: 20px 20px 20px 10px;
-
-    .notifications {
-      min-width: 450px;
-
-      .header {
-        padding-left: 0.3em;
-        margin-bottom: $spacing;
-
-        label {
-          font-size: 1.2em;
-        }
-
-        button {
-          @include button;
-          padding: $spacing/2 $spacing;
-
-          label {
-            font-size: 1.2em;
-          }
-        }
-      }
-
-      .notification-scrollable {
-        @include scrollbar;
-
-        scrollbar,
-        scrollbar:hover {
-          border-radius: max($radii - $border_width, 0);
-          border-top-left-radius: 0;
-          border-bottom-left-radius: 0;
-        }
-
-        .notification {
-          @include notification;
-
-          > box {
-            @include widget;
-            margin: $spacing/2 0;
-            padding: $spacing;
-          }
-        }
-      }
-
-      .placeholder {
-        color: $wallpaper_fg;
-        image {
-          font-size: 7em;
-        }
-        label {
-          font-size: 1.2em;
-        }
-
-        label,
-        image {
-          @if $drop_shadow {
-            text-shadow: $text_shadow;
-            -gtk-icon-shadow: $text_shadow;
-          } @else {
-            @include text_border;
-          }
-        }
-      }
-    }
 
     .datemenu {
       .date {
