feat(notifications): re-implement notifications

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,7 @@
 @import "/tmp/ags/scss/generated";
 @import "./common";
-@import "./widgets/notifications";
 @import "./widgets/media";
+@import "./widgets/popup-notification";
 @import "./widgets/powermenu";
 @import "./widgets/overview";
 @import "./widgets/desktop";
