--- a/src/scss/widgets/overview/_index.scss
+++ b/src/scss/widgets/overview/_index.scss
@@ -1,6 +1,6 @@
 @use "../../lib/colors";
 @use "applauncher";
-@use "notifications";
+@use "notification-list";
 
 @mixin calendar {
   @include widget;
