--- a/src/scss/lib/_mixins.scss
+++ b/src/scss/lib/_mixins.scss
@@ -32,31 +32,25 @@ $rounding_large: 1.705rem;
 }
 
 @mixin titlefont {
-  // Geometric sans-serif
   font-family: "Gabarito", "Lexend", sans-serif;
 }
 
 @mixin mainfont {
-  // Other clean sans-serif
   font-family: "AR One Sans", "Geist", "Inter", "Roboto", "Noto Sans",
     sans-serif;
-  // font-weight: 500;
 }
 
 @mixin icon-material {
-  // Material Design Icons
   font-family: "Material Symbols Rounded", "Material Symbols Outlined",
     "Material Symbols Sharp";
 }
 
 @mixin icon-nerd {
-  // Nerd Fonts
   font-family: "SpaceMono Nerd Font", "JetBrainsMono Nerd Font", monospace;
 }
 
 @mixin techfont {
-  // Monospace for sys info n stuff. Doesn't have to be a nerd font, but it's cool.
-  font-family: "JetBrains Mono Nerd Font", "JetBrains Mono NL",
+  font-family: "CaskaydiaCove Mono Nerd Font", "CaskaydiaCove Mono NL",
     "SpaceMono Nerd Font", monospace;
 }
 
