--- a/src/scss/lib/_notification.scss
+++ b/src/scss/lib/_notification.scss
@@ -1,77 +1,106 @@
 @use "material";
 @use "colors";
+@use "mixins";
 
-$spacing: 9px;
+@mixin notification-rounding {
+  @include mixins.normal-rounding;
+}
 
-@mixin notification() {
-  &.critical > box {
-    box-shadow: inset 0 0 0.5em 0 colors.$t_error;
-  }
+.notification-low {
+  @include notification-rounding;
+  background-color: colors.$l_l_t_surfaceVariant;
+  color: material.$onSurfaceVariant;
+  padding: mixins.$rounding_small;
+  padding-right: mixins.$rounding_small + 0.545rem;
+}
 
-  > box {
-    border-radius: 4px;
-    padding: $spacing;
-  }
+.notification-normal {
+  @include notification-rounding;
+  background-color: colors.$l_l_t_surfaceVariant;
+  color: material.$onSurfaceVariant;
+  padding: mixins.$rounding_small;
+  padding-right: mixins.$rounding_small + 0.545rem;
+}
+
+.notification-critical {
+  @include notification-rounding;
+  background-color: material.$error;
+  color: material.$onError;
+  padding: mixins.$rounding_small;
+  padding-right: mixins.$rounding_small + 0.545rem;
+}
+
+.notification-body-low {
+  color: mix(material.$onSurfaceVariant, material.$surfaceVariant, 67%);
+}
+
+.notification-body-normal {
+  color: mix(material.$onSurfaceVariant, material.$surfaceVariant, 67%);
+}
+
+.notification-body-critical {
+  color: mix(material.$onError, material.$error, 67%);
+}
+
+.notification-icon {
+  @include mixins.small-rounding;
+  min-width: 3.409rem;
+  min-height: 3.409rem;
+}
+
+.notification-icon-material {
+  background-color: colors.$t_secondaryContainer;
+  color: material.$onSecondaryContainer;
+}
+
+.notification-icon-material-low {
+  background-color: colors.$t_secondaryContainer;
+  color: material.$onSecondaryContainer;
+}
+
+.notification-icon-material-normal {
+  background-color: colors.$t_secondaryContainer;
+  color: material.$onSecondaryContainer;
+}
+
+.notification-icon-material-critical {
+  background-color: colors.$t_errorContainer;
+  color: material.$onErrorContainer;
+}
+
+.notification-close-btn {
+  @include notification-rounding;
+  padding: 0 0.136rem;
 
   &:hover {
-    .close-button {
-      background-color: colors.$t_error;
-    }
+    background-color: colors.$hovercolor;
   }
 
-  .content {
-    .title {
-      margin-right: $spacing;
-      color: colors.$t_onSurface;
-      font-size: 1.1em;
-    }
-
-    .time {
-      color: colors.$t_onSurface;
-    }
-
-    .description {
-      font-size: 0.9em;
-      color: colors.$t_onSurface;
-    }
-
-    .icon {
-      border-radius: 9px;
-      margin-right: $spacing;
-    }
+  &:active {
+    background-color: colors.$activecolor;
   }
+}
 
-  .actions {
-    padding-top: $spacing;
+.notification-circprog-low {
+  transition: 0ms linear;
+  min-width: 0.136rem;
+  min-height: 1.77rem;
+  padding: 0;
+  color: material.$onSecondaryContainer;
+}
 
-    button {
-      border-radius: 9px;
-      font-size: 1.2em;
-      padding: $spacing/2 0;
-      margin: 0 $spacing/2 0;
+.notification-circprog-normal {
+  transition: 0ms linear;
+  min-width: 0.136rem;
+  min-height: 1.77rem;
+  padding: 0;
+  color: material.$onSecondaryContainer;
+}
 
-      &:first-child {
-        margin-left: 0;
-      }
-
-      &:last-child {
-        margin-right: 0;
-      }
-    }
-  }
-
-  button.close-button {
-    margin-left: $spacing;
-    border-radius: 9px;
-    min-width: 1.2em;
-    min-height: 1.2em;
-
-    &:hover {
-      background-color: colors.$t_error;
-    }
-
-    &:active {
-      background-color: colors.$t_error;
-    }
-  }
+.notification-circprog-critical {
+  transition: 0ms linear;
+  min-width: 0.136rem;
+  min-height: 1.77rem;
+  padding: 0;
+  color: material.$onError;
 }
