feat(bar): add bar

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import "/tmp/ags/scss/generated";
 @import "./common";
+@import "./widgets/bar";
 @import "./widgets/media";
 @import "./widgets/popup-notification";
 @import "./widgets/powermenu";
