--- a/src/scss/widgets/_bar.scss
+++ b/src/scss/widgets/_bar.scss
@@ -7,7 +7,7 @@
   font-family: "Noto Sans", sans-serif;
 
   .workspaces button {
-    $buttonHeight: 8px;
+    $indicatorSize: 7px;
     $color: color.scale(material.$onBackground, $blackness: 66%);
     margin: 0 0.325rem;
 
@@ -21,9 +21,9 @@
 
     .indicator {
       font-size: 0;
-      min-width: 8px;
-      min-height: $buttonHeight;
-      border-radius: 9px;
+      min-width: $indicatorSize;
+      min-height: $indicatorSize;
+      border-radius: $indicatorSize;
       box-shadow: inset 0 0 0 1px $color;
       transition: $transition / 2;
       background-color: $color;
@@ -37,7 +37,7 @@
 
     &.active .indicator {
       min-width: 24px;
-      min-height: $buttonHeight + 2px;
+      min-height: $indicatorSize + 2px;
     }
   }
 }
