--- a/src/scss/widgets/_bar.scss
+++ b/src/scss/widgets/_bar.scss
@@ -30,7 +30,7 @@
     }
 
     &.visible .indicator,
-    &:active .indicator {
+    &:hover .indicator {
       background-color: material.$onBackground;
       box-shadow: inset 0 0 0 1px material.$onBackground;
     }
