refactor(bar): rename OverviewButton to DashboardButton

--- a/src/scss/widgets/_bar.scss
+++ b/src/scss/widgets/_bar.scss
@@ -41,7 +41,7 @@
     }
   }
 
-  .overview-button {
+  .dashboard-button {
     padding: 0 0.5rem;
     border-radius: 7px;
     transition: $transition;
