wip: start work on dashboard

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 @import "./widgets/popup-notification";
 @import "./widgets/powermenu";
 @import "./widgets/overview";
+@import "./widgets/dashboard";
 @import "./widgets/desktop";
 @import "./widgets/settings";
 @import "/tmp/ags/scss/additional";
