--- a/src/scss/widgets/_bar.scss
+++ b/src/scss/widgets/_bar.scss
@@ -3,7 +3,7 @@
 
 .bar {
   background-color: #000;
-  padding: 0.25rem 0.825rem;
+  padding: 0.25rem 0.125rem 0.25rem 0.825rem;
   font-family: "Noto Sans", sans-serif;
 
   .workspaces button {
