feat(osd): add volume indicator

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,5 +5,6 @@
 @import "./widgets/powermenu";
 @import "./widgets/overview";
 @import "./widgets/desktop";
+@import "./widgets/osd";
 @import "./widgets/settings";
 @import "/tmp/ags/scss/additional";
