feat(sidebar): add sidebars

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,9 @@
 @import "./widgets/media";
 @import "./widgets/popup-notification";
 @import "./widgets/powermenu";
+@import "./widgets/sidecenter";
+@import "./widgets/sideleft";
+@import "./widgets/sideright";
 @import "./widgets/overview";
 @import "./widgets/desktop";
 @import "./widgets/osd";
