--- a/src/scss/lib/_mixins.scss
+++ b/src/scss/lib/_mixins.scss
@@ -202,3 +202,11 @@ $black: black;
     min-height: 2em;
   }
 }
+
+@mixin menu_accel {
+  transition: 160ms cubic-bezier(0.38, 0.04, 1, 0.07);
+}
+
+@mixin menu_decel {
+  transition: 300ms cubic-bezier(0.1, 1, 0, 1);
+}
