refactor(overview): move sidebars scss to overview

--- a/src/scss/widgets/overview/_index.scss
+++ b/src/scss/widgets/overview/_index.scss
@@ -1,212 +1,3 @@
-@use "../../lib/colors";
-@use "../../lib/mixins";
-@use "notification-list";
-
-@mixin calendar {
-  @include widget;
-  padding: $spacing * 2 $spacing * 2 0;
-
-  calendar {
-    all: unset;
-
-    &.button {
-      @include button($flat: true);
-      margin: 1em;
-    }
-
-    &:selected {
-      box-shadow:
-        inset 0 -8px 0 0 transparentize($accent, 0.5),
-        inset 0 0 0 1px $accent;
-      border-radius: $radii * 0.6;
-    }
-
-    &.header {
-      background-color: transparent;
-      border: none;
-      color: transparentize($fg_color, 0.5);
-    }
-
-    &.highlight {
-      background-color: transparent;
-      color: transparentize($accent, 0.5);
-    }
-
-    &:indeterminate {
-      color: transparentize($fg_color, 0.9);
-    }
-    font-size: 1.1em;
-    padding: 0.2em;
-  }
-}
-
-window#overview {
-  .shader {
-    background-color: colors.$t_t_background;
-  }
-}
-
-window#overview .overview {
-  min-width: 1920px;
-  min-height: 1080px;
-
-  .row {
-    margin-top: $spacing;
-    &:first-child {
-      margin-top: 0;
-    }
-  }
-
-  .left {
-    @include mixins.menu_decel;
-    @include mixins.large-rounding;
-    @include mixins.elevation-border;
-    @include mixins.elevation2;
-    background-color: colors.$t_background;
-    padding: 20px 10px 20px 20px;
-
-    .media .player {
-      @include media;
-      margin-top: $spacing;
-    }
-
-    .volume {
-      .mixer-item {
-        margin: 0 $spacing;
-        scale {
-          @include slider($width: 7px);
-        }
-        > box {
-          padding: $spacing;
-        }
-        label:last-child {
-          min-width: 3em;
-        }
-        image {
-          font-size: 20px;
-        }
-      }
-
-      .menu {
-        background-color: rgba(0, 0, 0, 0);
-        border: $border_width solid $popover_border_color;
-        border-radius: $radii;
-      }
-    }
-
-    .slider-box {
-      @include widget;
-      padding: $spacing;
-
-      > box:last-child {
-        margin-bottom: 0;
-      }
-
-      .slider > * {
-        margin-left: $spacing;
-        &:first-child {
-          margin-left: 0;
-        }
-      }
-
-      button,
-      .icon {
-        @include button($flat: true);
-        padding: $spacing/2;
-      }
-
-      scale {
-        @include slider;
-
-        &:last-child {
-          margin-right: $spacing/2;
-        }
-      }
-    }
-
-    .network-widget {
-      @include widget;
-      button,
-      .icon {
-        @include button($flat: true);
-        padding: $spacing / 1.5;
-      }
-
-      .menu {
-        background-color: rgba(0, 0, 0, 0);
-        border: $border_width solid $popover_border_color;
-        border-radius: $radii;
-      }
-    }
-
-    .system-tray {
-      @include widget;
-      margin-bottom: 0;
-      padding: $spacing / 2;
-
-      .panel-button {
-        all: unset;
-        padding: $spacing;
-      }
-    }
-  }
-
-  .center {
-    @include mixins.menu_decel;
-    @include mixins.large-rounding;
-    @include mixins.elevation-border;
-    @include mixins.elevation2;
-    background-color: colors.$t_background;
-    padding: 20px 10px;
-  }
-
-  .right {
-    @include mixins.menu_decel;
-    @include mixins.large-rounding;
-    @include mixins.elevation-border;
-    @include mixins.elevation2;
-    background-color: colors.$t_background;
-
-    padding: 20px 20px 20px 10px;
-
-    .datemenu {
-      .date {
-        margin-bottom: 8px;
-        font-weight: 500;
-      }
-
-      .timezones {
-        .tz-local {
-          font-size: 2em;
-        }
-      }
-
-      .calendar {
-        @include calendar;
-        margin-top: $spacing * 2;
-      }
-    }
-  }
-}
-
-@mixin panel_button($flat: false, $reactive: true) {
-  all: unset;
-
-  @include accs_button($flat, $reactive);
-  > * {
-    margin: $float;
-  }
-
-  label {
-    font-size: $font-size;
-    font-weight: bold;
-  }
-
-  image {
-    font-size: $font-size * 1.2;
-  }
-
-  > * {
-    padding: 0.3em 0.5em;
-  }
-}
+@use "sideleft";
+@use "sidecenter";
+@use "sideright";
