--- a/src/scss/widgets/overview/_sidecenter.scss
+++ b/src/scss/widgets/overview/_sidecenter.scss
@@ -1,6 +1,6 @@
-@use "../lib/mixins";
-@use "../lib/colors";
-@use "../lib/material";
+@use "../../lib/mixins";
+@use "../../lib/colors";
+@use "../../lib/material";
 
 .sidebar-center {
     @include mixins.menu_decel;
