--- a/src/scss/widgets/overview/_sideright.scss
+++ b/src/scss/widgets/overview/_sideright.scss
@@ -1,5 +1,5 @@
-@use "../lib/mixins";
-@use "../lib/colors";
+@use "../../lib/mixins";
+@use "../../lib/colors";
 
 .sidebar-right {
     @include mixins.menu_decel;
