--- a/src/scss/widgets/overview/_sideright.scss
+++ b/src/scss/widgets/overview/_sideright.scss
@@ -1,5 +1,6 @@
 @use "../../lib/mixins";
 @use "../../lib/colors";
+@use "../../lib/notification";
 
 .sidebar-right {
     @include mixins.menu_decel;
@@ -18,4 +19,17 @@
 .sideright-hide {
   @include mixins.menu_accel;
   margin-right: -30.682rem;
+}
+
+.notification-closeall-btn {
+  @include notification.notification-rounding;
+  padding: 0.341rem;
+
+  &:hover {
+    background-color: colors.$hovercolor;
+  }
+
+  &:active {
+    background-color: colors.$activecolor;
+  }
 }
