--- a/src/scss/widgets/overview/_sidecenter.scss
+++ b/src/scss/widgets/overview/_sidecenter.scss
@@ -7,17 +7,13 @@
   min-width: 36.5rem;
 }
 
-.sidecenter-show {
-  @include mixins.menu_decel;
-}
-
-.sidecenter-hide {
+.overview-hide .sidebar-center {
   @include mixins.menu_accel;
   margin-top: 30.682rem;
   margin-bottom: -30.682rem;
 }
 
-.sidecenter-group {
+.sidebar-center-group {
   @include mixins.menu_decel;
   @include mixins.small-rounding;
   @include mixins.elevation-border;
