--- a/src/scss/widgets/overview/_sideright.scss
+++ b/src/scss/widgets/overview/_sideright.scss
@@ -12,11 +12,7 @@
     padding: 1.023rem;
 }
 
-.sideright-show {
-  @include mixins.menu_decel;
-}
-
-.sideright-hide {
+.overview-hide .sidebar-right {
   @include mixins.menu_accel;
   margin-right: -30.682rem;
 }
