feat(overview): add calendar and clock

--- a/src/scss/widgets/overview/_index.scss
+++ b/src/scss/widgets/overview/_index.scss
@@ -18,6 +18,12 @@
   padding: 0.341rem;
 }
 
+.sidebar-group {
+  @include mixins.normal-rounding;
+  @include group-padding;
+  background-color: colors.$t_surface;
+}
+
 .sidebar-group-invisible {
   @include group-padding;
 }
