--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -1,13 +1,53 @@
 @use "lib/mixins";
 @use "lib/material";
 
-window {
-  background-color: transparent;
+*:focus {
+  selection {
+    background-color: material.$secondary;
+    color: material.$onSecondary;
+  }
 }
 
 * {
   all: unset;
 }
+
+tooltip {
+  @include mixins.normal-rounding;
+  background-color: material.$surfaceVariant;
+  color: material.$onSurfaceVariant;
+  border: 1px solid material.$onSurfaceVariant;
+}
+
+menu {
+  @include mixins.elevation-border-softer;
+  padding: 0.681rem;
+  background-color: material.$surfaceVariant;
+  color: material.$onSurfaceVariant;
+  border-radius: 1.159rem;
+  -gtk-outline-radius: 1.159rem;
+}
+
+menubar>menuitem {
+  border-radius: 0.545rem;
+  -gtk-outline-radius: 0.545rem;
+  min-width: 13.636rem;
+  min-height: 2.727rem;
+}
+
+menu>menuitem {
+  padding: 0.4em 1.5rem;
+  background: transparent;
+  transition: 0.2s ease background;
+  border-radius: 0.545rem;
+  -gtk-outline-radius: 0.545rem;
+}
+
+menu>menuitem:hover {
+  background-color: mix(material.$surfaceVariant, material.$onSurfaceVariant, 90%);
+}
+
+/* OLD STUFF */
 
 @mixin common {
   all: unset;
@@ -96,50 +136,6 @@ window {
   }
 }
 
-@mixin accs_button($flat: false, $reactive: true) {
-  @include button($flat: true, $reactive: false, $focusable: false);
-  color: $fg_color;
-
-  > * {
-    border-radius: $radii;
-    transition: $transition;
-
-    @if $flat {
-      background-color: transparent;
-      box-shadow: none;
-    } @else {
-      background-color: $widget_bg;
-      box-shadow: inset 0 0 0 $border_width $border_color;
-    }
-  }
-
-  @if $reactive {
-    &:focus > *,
-    &.focused > * {
-      @include button_focus;
-    }
-
-    &:hover > * {
-      @include button_hover;
-    }
-
-    &:active,
-    &.active,
-    &.on,
-    &:checked {
-      > * {
-        @include button_active;
-      }
-
-      &:hover > * {
-        box-shadow:
-          inset 0 0 0 $border_width $border_color,
-          inset 0 0 0 99px $hover;
-      }
-    }
-  }
-}
-
 @mixin floating_widget {
   @include common;
 
@@ -152,105 +148,6 @@ window {
   background-color: $float_bg;
   color: $fg_color;
   padding: $popover_padding;
-}
-
-@mixin slider(
-  $width: 0.7em,
-  $slider_width: 0.5em,
-  $gradient: $active_gradient,
-  $slider: true,
-  $focusable: true,
-  $radii: $radii
-) {
-  @include common;
-  * {
-    all: unset;
-  }
-
-  trough {
-    transition: $transition;
-    border-radius: $radii;
-    border: $border;
-    background-color: $widget_bg;
-    min-height: $width;
-    min-width: $width;
-
-    highlight,
-    progress {
-      border-radius: max($radii - $border_width, 0);
-      background-image: $gradient;
-      min-height: $width;
-      min-width: $width;
-    }
-  }
-
-  slider {
-    box-shadow: none;
-    background-color: transparent;
-    border: $border_width solid transparent;
-    transition: $transition;
-    border-radius: $radii;
-    min-height: $width;
-    min-width: $width;
-    margin: -$slider_width;
-  }
-
-  &:hover {
-    trough {
-      background-color: $hover;
-    }
-
-    slider {
-      @if $slider {
-        background-color: $fg_color;
-        border-color: $border-color;
-
-        @if $drop_shadow {
-          box-shadow: 0 0 3px 0 $shadow;
-        }
-      }
-    }
-  }
-
-  &:disabled {
-    highlight,
-    progress {
-      background-color: transparentize($fg_color, 0.4);
-      background-image: none;
-    }
-  }
-
-  @if $focusable {
-    trough:focus {
-      background-color: $hover;
-      box-shadow: inset 0 0 0 $border_width $accent;
-
-      slider {
-        @if $slider {
-          background-color: $fg_color;
-          box-shadow: inset 0 0 0 $border_width $accent;
-        }
-      }
-    }
-  }
-}
-
-@mixin shader($width: 3em) {
-  @include common;
-  border-radius: max($radii - $border_width, 0);
-
-  label {
-    color: $shader_fg;
-    text-shadow: $text_shadow;
-  }
-
-  @if $theme == "dark" {
-    box-shadow: inset 0 0 $width $width/3 transparentize($bg_color, 0.3);
-  }
-
-  @if $theme == "light" {
-    background-color: transparentize($bg_color, 0.8);
-  }
 }
 
 @mixin text_border {
@@ -308,71 +205,5 @@ window {
 
   image {
     color: transparent;
-  }
-}
-
-@mixin hidden {
-  background-color: transparent;
-  background-image: none;
-  border-color: transparent;
-  box-shadow: none;
-  -gtk-icon-transform: scale(0);
-
-  * {
-    background-color: transparent;
-    background-image: none;
-    border-color: transparent;
-    box-shadow: none;
-    -gtk-icon-transform: scale(0);
-  }
-}
-
-tooltip {
-  @include common;
-  * {
-    all: unset;
-  }
-
-  background-color: transparent;
-  border: none;
-
-  > * > * {
-    background-color: $bg_color;
-    border-radius: $radii;
-    border: $border_width solid $popover_border_color;
-    color: $fg_color;
-    padding: 8px;
-    margin: 4px;
-    box-shadow: 0 0 3px 0 $shadow;
-  }
-}
-
-window.popup {
-  > * {
-    border: none;
-    box-shadow: none;
-  }
-
-  menu {
-    border-radius: $popover_radius;
-    background-color: $bg_color;
-    padding: $spacing;
-    border: $border;
-
-    separator {
-      background-color: $border_color;
-    }
-
-    menuitem {
-      @include button;
-      padding: $spacing/2;
-      margin: $spacing/2 0;
-      &:first-child {
-        margin-top: 0;
-      }
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
   }
 }
